--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body {
     font-family: Georgia, "Times New Roman", Times, serif;
     color: #555;
 }
-h1, h2, h3, h4, h5, h6, {
+h1, h2, h3, h4, h5, h6 {
     margin-top: 0;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-weight: normal;
