--- a/index.css
+++ b/index.css
@@ -129,6 +129,15 @@ h1, h2, h3, h4, h5, h6 {
     height: 5em;
 }
 
+.small-separation {
+	height: 2em;
+}
+
 img {
 	width: 700px;
+}
+
+.star {
+	width: 50px;
+	height: 50px;
 }
